wikipedia/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikipedia-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikipedia
  template:
    metadata:
      labels:
        app: wikipedia
    spec:
      volumes:
        - name: www
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
              readOnly: true
