wikipedia/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikipedia-svc
spec:
  selector:
    app: wikipedia
  ports:
    - port: 5678
      targetPort: 80
